@@ -53,6 +53,40 @@
             </p>
 
             <div class="download">
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.21/cheese-2.21.5.tar.gz"
+                title="Source code of the latest stable release">
+                <img src="data/images/package-x-generic.png" alt="source package" />
+                Cheese 2.21.5
+              </a>
+              <p>
+              was released on January 14th 2008<br />
+              md5sums: c1e5c94879bccf01325b841a3e163055<br />
+              </p>
+              <h3>Changes</h3>
+              <ul>
+                <li>version bump to follow the gnome release cycle</li>
+                <li>add a stylish countdown widget by Mirco "MacSlow" M&uuml;ller, courtesy of Patryk Zawadzki</li>
+                <li>add X-GNOME-Bugzilla-* keys and validate .desktop file.  fixes bug #508910, courtesy of Luca Ferretti</li>
+                <li>vertical and horizontal flip options were switched (again).  fixes bug #479238, courtesy of Steve Magoun</li>
+                <li>use the gst-player by Mathias Hasselman for playing the shutter sound</li>
+                <li>removed color forcing. This has been fixed in gstreamer</li>
+                <li>do not crash when trash directory is not present. fixes bug #507071</li>
+                <li>make cheese build against uninstalled gstreamer. fixes bug #479259, courtesy of Tim Philip M&uuml;ller</li>
+                <li>added/updated translations
+                <ul>
+                  <li>et, courtesy of Ivar Smolin</li>
+                  <li>ja, courtesy of Takeshi Aihana</li>
+                  <li>ca, courtesy of Gil Forcada</li>
+                  <li>oc, courtesy of Yannig Marchegay</li>
+                  <li>sv, courtesy of Daniel Nylander</li>
+                  <li>fr, courtesy of Robert-André Mauchin</li>
+                  <li>pt_BR, courtesy of Rodrigo Flores</li>
+                </ul>
+                </li>
+              </ul>
+            </div>
+
+            <div class="download">
               <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/0.3/cheese-0.3.0.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
