@@ -203,16 +203,18 @@
               <li><a href="http://desdeamericaconamor.org/blog/node/383">Quim Gil on Cheese</a></li>
             </ul>
 
-            <h2>What's the "Anti-toc2 and pro-autotools flames"-counter state?  </h2>
-            <p>
-            the counter state is 9 (and counting...) ;)
-            </p>
-
           </div>
         </div>
 
         <div id="bottomRight">
           <h2>News</h2>
+
+          <h3>December 24th 2007</h3>
+          <p>
+          From now on, Cheese will follow the GNOME Release Cycle. That means
+          for you:<br/>
+          Cheese 2.21.5 was released. <a href="download.html">Get it!</a>
+          </p>
 
           <h3>January 10th 2008</h3>
           <p>
@@ -267,21 +269,6 @@
           <h3>September 15th 2007</h3>
           <p>
           Cheese has moved to <a href="http://svn.gnome.org">svn.gnome.org</a>
-          </p>
-
-          <h3>September 5th 2007</h3>
-          <p>
-          Cheese 0.2.4 was released. <a href="download.html">Get it!</a>
-          </p>
-
-          <h3>August 30th 2007</h3>
-          <p>
-          Cheese 0.2.3 was released. <a href="download.html">Get it!</a>
-          </p>
-
-          <h3>August 21st 2007</h3>
-          <p>
-          Cheese 0.2.2 was released. <a href="download.html">Get it!</a>
           </p>
 
         </div>
