@@ -1,6 +1,12 @@
 2008-01-14  daniel g. siegel <dgsiegel@gmail.com>
 
 	* www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html: 
+	  populate the 2.21.5 release
+
+2008-01-14  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/download.html,
 	  www.gnome.org/projects/cheese/index.html,
 	  www.gnome.org/projects/cheese/screenshots.html: 
 	  update the cheese (c) to 2008
